Bug fixed: stack overflow when the border is not fully closed.

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -65,6 +65,10 @@ h1 {
     font-size: 1rem;
     cursor: pointer;
 
+    &.invalid {
+        background-color: violet;
+    }
+
     &.mine {
         background: #c0c0c0;
         border: 1px solid #e4e4e4;
